<resources>
    <string name="app_name">Fundamental Yoga Pose Exercise Auxiliary System</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="java_entry_title">Run the ML Kit quickstart written in Java</string>
    <string name="kotlin_entry_title">Run the ML Kit quickstart written in Kotlin</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="toggle_turn_on">Front</string>
    <string name="toggle_turn_off">Back</string>
    <string name="desc_camera_source_activity">Vision detectors demo with live camera preview</string>
    <string name="desc_still_image_activity">Vision detectors demo with a still image</string>
    <string name="desc_camerax_live_preview_activity">Vision detectors demo with live preview using CameraX. Note that CameraX is only supported on API 21+</string>
    <string name="desc_cameraxsource_demo_activity">Object detection with custom classifier using ML Kit CameraXSource API. Note that CameraX is only supported on API 21+</string>
    <string name="download_error">Download error</string>
    <string name="start_over">Start over</string>
    <string name="menu_item_settings">Settings</string>
    <string name="select_image">Select image</string>
    <string name="custom_object_detection">Custom Object Detector</string>
    <string name="pref_screen">ps</string>
    <string name="pref_screen_title_live_preview">Live preview settings</string>
    <string name="pref_screen_title_still_image">Still image settings</string>
    <string name="pref_screen_title_camerax_live_preview">CameraX live preview settings</string>
    <string name="pref_screen_title_cameraxsource_demo">CameraXSource live preview settings</string>
    <string name="pref_category_info">Detection Info</string>
    <string name="pref_category_face_detection">Face Detection</string>
    <string name="pref_category_object_detection">Object Detection / Custom Object Detection</string>
    <string name="pref_category_automl">AutoML Image Labeling</string>
    <string name="pref_category_pose_detection">Pose Detection</string>
    <string name="pref_category_segmentation">Selfie Segmentation</string>
    <string name="pref_category_text_recognition">Text Recognition</string>
    <string name="pref_category_key_camera">pckc</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_key_rear_camera_preview_size">rcpvs</string>
    <string name="pref_key_rear_camera_picture_size">rcpts</string>
    <string name="pref_key_front_camera_preview_size">fcpvs</string>
    <string name="pref_key_front_camera_picture_size">fcpts</string>
    <string name="pref_key_camerax_rear_camera_target_resolution">crctas</string>
    <string name="pref_key_camerax_front_camera_target_resolution">cfctas</string>
    <string name="pref_key_camera_live_viewport">clv</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_camerax_rear_camera_target_resolution">CameraX rear camera target resolution</string>
    <string name="pref_title_camerax_front_camera_target_resolution">CameraX front camera target resolution</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>
    <string name="pref_title_info_hide">Hide detection info</string>
    <string name="pref_key_info_hide">ih</string>
    <string name="pref_title_group_recognized_text_in_blocks">Group recognized text in paragraphs</string>
    <string name="pref_key_group_recognized_text_in_blocks">grtib</string>
    <string name="pref_title_show_language_tag">Show language identified</string>
    <string name="pref_key_show_language_tag">slt</string>
    <string name="pref_title_show_text_confidence">Show confidence score</string>
    <string name="pref_key_show_text_confidence">stc</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects">lpodemo</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects">siodemo</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_key_live_preview_object_detector_enable_classification">lpodec</string>
    <string name="pref_key_still_image_object_detector_enable_classification">siodec</string>
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode">lpfdlm</string>
    <string name="pref_entries_face_detector_landmark_mode_no_landmarks">No landmarks</string>
    <string name="pref_entries_face_detector_landmark_mode_all_landmarks">All landmarks</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks">1</string>
    <string name="pref_entry_values_face_detector_landmark_mode_all_landmarks">2</string>
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_key_live_preview_face_detection_contour_mode">lpfdcm</string>
    <string name="pref_entries_face_detector_contour_mode_no_contours">No contours</string>
    <string name="pref_entries_face_detector_contour_mode_all_contours">All contours</string>
    <string name="pref_entry_values_face_detector_contour_mode_no_contours">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours">2</string>
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_key_live_preview_face_detection_classification_mode">lpfdcfm</string>
    <string name="pref_entries_face_detector_classification_mode_no_classifications">No classifications</string>
    <string name="pref_entries_face_detector_classification_mode_all_classifications">All classifications</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications">1</string>
    <string name="pref_entry_values_face_detector_classification_mode_all_classifications">2</string>
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_face_detection_performance_mode">lpfdpm</string>
    <string name="pref_entries_face_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_face_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_accurate">2</string>
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_key_live_preview_face_detection_face_tracking">lpfdft</string>
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_key_live_preview_face_detection_min_face_size">lpfdmfs</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_toast_invalid_min_face_size">Minimum face size must be a float value and in the range [0.0, 1.0]</string>
    <string name="pref_title_pose_detector_performance_mode">Performance mode</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode">lppdpm</string>
    <string name="pref_key_still_image_pose_detection_performance_mode">sipdpm</string>
    <string name="pref_entries_pose_detector_performance_mode_fast">Fast</string>
    <string name="pref_entries_pose_detector_performance_mode_accurate">Accurate</string>
    <string name="pref_entry_values_pose_detector_performance_mode_fast">1</string>
    <string name="pref_entry_values_pose_detector_performance_mode_accurate">2</string>
    <string name="pref_title_pose_detector_prefer_gpu">Prefer using GPU</string>
    <string name="pref_key_pose_detector_prefer_gpu">pdpg</string>
    <string name="pref_summary_pose_detector_prefer_gpu">If enabled, GPU will be used as long as it is available, stable and returns correct results. In this case, the detector will not check if GPU is really faster than CPU.</string>
    <string name="pref_title_pose_detector_show_in_frame_likelihood">Show in-frame likelihood</string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood">lppdsifl</string>
    <string name="pref_key_still_image_pose_detector_show_in_frame_likelihood">sipdsifl</string>
    <string name="pref_title_pose_detector_visualize_z">Visualize z value</string>
    <string name="pref_key_pose_detector_visualize_z">pdvz</string>
    <string name="pref_title_pose_detector_rescale_z">Rescale z value for visualization</string>
    <string name="pref_key_pose_detector_rescale_z">pdrz</string>
    <string name="pref_title_pose_detector_run_classification">Run Classification</string>
    <string name="pref_key_pose_detector_run_classification">pdrc</string>
    <string name="pref_summary_pose_detector_run_classification">Classify squat and pushup poses. Count reps in streaming mode. To get the best classification results based on the current sample data, face the camera side way and make sure your full body is in the frame.</string>
    <string name="pref_title_segmentation_raw_size_mask">Enable raw size mask</string>
    <string name="pref_key_segmentation_raw_size_mask">srsm</string>
    <string name="pref_group_title_face_mesh">Face Mesh Detection</string>
    <string name="pref_title_face_mesh_use_case">Use Case</string>
    <string name="pref_key_face_mesh_use_case">face_mesh_use_case</string>
    <string name="warrior2">Warrior 2</string>
    <string name="plank">Plank</string>
    <string name="goddess">Goddess</string>
    <string name="chair">Chair</string>
    <string name="downdog">Downdog</string>
    <string name="four_limbed_staff">Four-Limbed\nstaff</string>
    <string name="boat">Boat</string>
    <string name="rejuvenation">Rejuvenation</string>
    <string name="star">Star</string>
    <string name="tree">Tree</string>
    <string name="language">English</string>
    <string name="History_Record">\nHistory record\n</string>
    <string name="Clear_Data">\nClear data\n</string>
    <string name="Instructions_for_use">\nInstructions for use\n</string>
    <string name="Contact_us">\nContact us\n</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">confirm</string>
    <string name="add_posture">Add posture</string>
    <string name="add_list">Add list</string>
    <string name="list_name">List name</string>
    <string name="list_ill">Explanation</string>
    <string name="easy">Easy</string>
    <string name="hard">Difficult</string>
    <string name="second">s</string>
</resources>