<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">

        <Button
            android:id="@+id/historyBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/History_Record"
            android:background="@drawable/roundbtn" />
        <Button
            android:id="@+id/removeSQL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/Clear_Data"
            android:background="@drawable/roundbtn" />
        <Button
            android:id="@+id/illBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/Instructions_for_use"
            android:background="@drawable/roundbtn" />
        <Button
            android:id="@+id/mailBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/Contact_us"
            android:background="@drawable/roundbtn" />
    </LinearLayout>

</FrameLayout>